fix double scroll

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,5 +1,3 @@
-@import '../../../themes/variables';
-
 mat-toolbar {
   height: auto;
   padding: 0.4rem 0;
@@ -10,7 +8,7 @@ mat-toolbar {
 }
 
 mat-sidenav-container {
-  height: 100%;
+  min-height: 100%;
 }
 
 @media (max-width: 768px) {
